# Public-Voting-System

./: .gitignore  Cargo.toml  README.md  build.rs
data/: candidates.csv  display.toml
src/: display.rs  main.rs  models.rs  storage.rs  tally.rs  ui.rs  util.rs
